# health-studio

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml
backend/: entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3578b2f8ae58_add_is_rx_to_result_entries.py  5fb932efb44c_add_entity_tags_table.py  6593ce0a7822_add_start_value_to_goals.py  7e8d28a29697_add_entity_mentions_table.py  852ff4380111_add_lower_is_better_to_goals.py  894cb45ed7fe_initial_schema.py  a1b2c3d4e5f6_add_search_index_fts5.py  b4e7a1c9d302_add_auth_state_tables.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/models/: __init__.py  api_key.py  auth_state.py  goal.py  journal.py  mention.py  metric.py  result.py  tag.py  user.py
backend/app/routers/: auth.py  entities.py  export_import.py  goals.py  graph.py  journals.py  mentions.py  metrics.py  results.py  search.py  tags.py  timeline.py
backend/app/schemas/: auth.py  goal.py  graph.py  journal.py  mention.py  metric.py  preview.py  result.py  search.py  tag.py  timeline.py
backend/app/services/: auth.py  dashboard.py  export_import.py  goal.py  graph.py  journal.py  mentions.py  metric.py  preview.py  result.py  search.py  tags.py  timeline.py
backend/tests/: conftest.py  test_alembic.py  test_auth.py  test_entity_preview.py  test_export_import.py  test_goals.py  test_graph.py  test_health.py  test_journals.py  test_mentions.py  test_metrics.py  test_models.py  test_results.py  test_search.py  test_seed.py  test_tags.py  test_timeline.py
cli/: pyproject.toml
cli/health_studio_cli/: __init__.py  __main__.py  api.py  config.py  display.py  main.py  resolve.py
cli/health_studio_cli/commands/: __init__.py  config_cmd.py  dashboard.py  export_cmd.py  goals.py  graph.py  import_cmd.py  journal.py  (+5 more)
cli/scripts/: install.ps1  install.sh
cli/tests/: conftest.py  test_config.py  test_export_import.py  test_goals.py  test_journal.py  test_main.py  test_metrics.py  test_resolve.py  test_results.py
(+106 files in other folders)
