[project]
name = "health-studio-backend"
version = "0.1.0"
description = "Health Studio — local-first personal health dashboard API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "webauthn>=2.1,<3",
    "python-multipart>=0.0.9",
    "bcrypt>=4.1,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "ruff>=0.5,<1",
    "pip-audit>=2.7,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S104", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"app/routers/**" = ["TCH"]
"app/schemas/**" = ["TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
