[project]
name = "health-studio-cli"
version = "0.1.0"
description = "Health Studio CLI — command-line interface for the Health Studio API"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<14",
    "httpx>=0.27,<1",
    "tomli>=2,<3;python_version<'3.12'",
    "tomli-w>=1,<2",
]

[project.scripts]
hs = "health_studio_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.5,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["health_studio_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = []

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S104", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
